<resources>
    <string name="app_name" translatable="false">MS Application</string>

    <string name="open_nav" translatable="false">Open Navigation</string>
    <string name="close_nav" translatable="false">Close Navigation</string>
    <string name="notification">Notifications</string>
    <string name="enter_your_post">Enter your post</string>
    <string name="appointments">Appointments</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="address">Address :</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="female">Female</string>
    <string name="profile_visibility">PROFILE VISIBILITY</string>
    <string name="show_your_profile_to_other_members">Show your profile to other members</string>
    <string name="messages">Messages</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="delete_my_account">Delete my Account</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the terms of service and privacy policy</string>
    <string name="sign_in">Sign in</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_note_details">Enter note details</string>
    <string name="save">Save</string>
    <string name="enter_title">Enter title</string>
    <string name="logout">Logout</string>
    <string name="faq">FAQ</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="appointments_events">Appointments / Events</string>
    <string name="daily_notes">Daily Notes</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="self_check">Self-check Health Tests</string>
    <string name="community">Community</string>
    <string name="welcome_to_neuroms">NeuroMS</string>
    <string name="documents">Documents</string>
    <string name="notes">Notes</string>
    <string name="legal">LEGAL</string>
    <string name="learn_more_with_our_faq">Learn more with our FAQ</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="feedback_and_faq">FEEDBACK AND FAQ</string>
    <string name="new_messages_mentions_and_match_requests">New messages, mentions and match requests</string>
    <string name="my_medical_info">My Medical info</string>
    <string name="medical_info">Medical Info</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_our_app">Welcome to our app</string>
    <string name="track_your_symptoms">Track Your Symptoms</string>
    <string name="connect_with_others">Connect with Others</string>
    <string name="lets_get_started">Thank you for choosing our app to help you manage multiple sclerosis. Let\'s get started!</string>
    <string name="lets">Let\'s get started!</string>
    <string name="change">Change</string>
    <string name="treatments">Treatment Plan</string>
    <string name="are_you_ready_to_take_your_first_step_towards_managing_multiple_sclerosis_with_us">Are you ready to take your first step towards managing multiple sclerosis with us?</string>
    <string name="perform_simple_tasks_on_your_smartphone_with_the_aim_of_understanding_the_effects_of_ms_on_mood_cognition_hand_motor_function_postural_stability_and_gait">perform simple tasks on your smartphone with the aim of understanding the effects of MS on mood, cognition, hand-motor function, postural stability, and gait.</string>
    <string name="an_mri_magnetic_resonance_imaging_of_the_brain_is_a_key_diagnostic_tool_used_in_the_evaluation_of_ms">An MRI (Magnetic Resonance Imaging) of the brain is a key diagnostic tool used in the evaluation of MS.</string>
    <string name="empty">Notification bin is empty.</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="save_event">Save Event</string>
    <string name="multiple_sclerosis_management">MS Management</string>
    <string name="date_and_time">Date and Time</string>
    <string name="appointment_title">Appointment Title</string>
    <string name="mayada_elsayed">Mayada Elsayed</string>
    <string name="mayyadaelsayed8_gmail_com">mayyadaelsayed8@gmail.com</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="groups">Groups</string>
    <string name="begin">You\'re all set to begin your journey with our MS app. Tap "\Get Started\" to start tracking your symptoms and taking control of your MS.</string>
    <string name="join">Join our community of people living with MS. Share experiences, ask questions, and find support from others who understand what you\'re going through.</string>
    <string name="use_our_app">Use our app to log your MS symptoms, such as fatigue, pain, and mobility issues. This will help you and your healthcare provider better understand your condition.</string>
    <string name="diet_and_nutrition_tracker">Diet and Nutrition Tracker</string>
    <string name="daily_tips_and_insights">Daily Tips and Insights</string>
    <string name="current_symptoms">Current Symptoms</string>
    <string name="show">Show</string>
    <string name="medications">Medications</string>
    <string name="emergency_information">Emergency Information</string>
    <string name="educational_resources">Educational Resources</string>
    <string name="enter_event_details">Enter Event Details</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter time of alarm</string>
    <string name="enter_the_event_details">Enter the event details</string>
    <string name="enter_the_event_name">Enter the event name</string>
    <string name="events">Events</string>
</resources>